# Skupinova_Prace_2025

./: CMakeLists.txt
Skupinove_ulohy/: main
Textova_hra/: TODO.md  main.cpp
Textova_hra/data/: enemies.txt
Textova_hra/src/: enemy_types.cpp  enemy_types.h  inventory.cpp  inventory.h  item.h  loot.cpp  loot.h  lootmanager.h
Ukoly_30-10-2025/Advent_of_code_2021_2/: main.cpp
Ukoly_7-11-2025/: main.cpp
